--- a/views/error.html
+++ b/views/error.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>淄博景博膜结构工程有限公司</title>
+    <link href="/public/css/404.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>啊呀，出错了</h1>
+    <div class="bg">
+        <img src="/public/imgs/404.png"/>
+        <div class="toHome">
+            <button onclick="back2Home()">返回首页</button>
+        </div>
+
+    </div>
+</div>
+<script>
+    function back2Home(){
+        window.location.href = 'http://localhost:3000'
+    }
+</script>
 </body>
 </html>
