--- a/views/index.html
+++ b/views/index.html
@@ -18,19 +18,19 @@
 <div class="nav">
     <div class="nav_main bold f14">
         <ul>
-            <li><a href="http://www.mtlmjg.com/">网站首页</a></li>
+            <li><a href="http://localhost:3000/">网站首页</a></li>
 
-            <li><a href="http://www.mtlmjg.com/1/">公司简介</a></li>
+            <li><a href="http://localhost:3000/1/">公司简介</a></li>
 
-            <li><a href="http://www.mtlmjg.com/2/" rel="dropmenu2">产品展示</a></li>
+            <li><a href="http://localhost:3000/2/" rel="dropmenu2">产品展示</a></li>
 
-            <li><a href="http://www.mtlmjg.com/3/">工程案例</a></li>
+            <li><a href="http://localhost:3000/3/">工程案例</a></li>
 
-            <li><a href="http://www.mtlmjg.com/4/">新闻资讯</a></li>
+            <li><a href="http://localhost:3000/4/">新闻资讯</a></li>
 
-            <li><a href="http://www.mtlmjg.com/a5/">膜结构介绍</a></li>
+            <li><a href="http://localhost:3000/a5/">膜结构介绍</a></li>
 
-            <li><a href="http://www.mtlmjg.com/6/">联系我们</a></li>
+            <li><a href="http://localhost:3000/6/">联系我们</a></li>
 
         </ul>
     </div>
@@ -39,27 +39,27 @@
     <!-- 代码 开始 -->
     <div id="full-screen-slider">
         <ul id="slides">
-            <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;"><a href="http://www.mtlmjg.com/" target="_blank"></a></li>
+            <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;"><a href="http://localhost:3000" target="_blank"></a></li>
 
-        </ul><ul id="pagination" style="margin-left: 445px;"><li class="current"><a href="http://www.mtlmjg.com/#">1</a></li></ul>
+        </ul><ul id="pagination" style="margin-left: 445px;"><li class="current"><a href="http://localhost:3000/#">1</a></li></ul>
     </div>
     <!-- 代码 结束 -->
 </div>
-<div class="main_top" style="line-height:40px;"><a href="http://www.mtlmjg.com/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台</div>
+<div class="main_top" style="line-height:40px;"><a href="http://localhost:3000/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台</div>
 
-<div class="main_tit"> <span>娜美瑞膜结构，产品展示</span>
+<div class="main_tit"> <span>景博瑞膜结构，产品展示</span>
     <p>先进的生产技术，节约您的生产成本！</p>
 </div>
 <div class="cpzs">
     <ul>
-        <li><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/196.html"><img src="/public/imgs/product/1-1FS0192K1M0.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/196.html">景观设施膜结构</a></span></li>
-        <li><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/195.html"><img src="/public/imgs/product/1-1FS0192G55X.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/195.html">景观设施膜结构</a></span></li>
-        <li><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/194.html"><img src="/public/imgs/product/1-1FS0192649E7.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/194.html">景观设施膜结构</a></span></li>
-        <li><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/193.html"><img src="/public/imgs/product/1-1FS0192620647.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/193.html">景观设施膜结构</a></span></li>
-        <li><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/192.html"><img src="/public/imgs/product/1-1FS0192555509.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/192.html">景观设施膜结构</a></span></li>
-        <li><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/191.html"><img src="/public/imgs/product/1-1FS0192532V3.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/191.html">景观设施膜结构</a></span></li>
-        <li><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/190.html"><img src="/public/imgs/product/1-1FS019250b13.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/190.html">景观设施膜结构</a></span></li>
-        <li><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/189.html"><img src="/public/imgs/product/1-1FS0192440D6.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/a/chanpinzhongxin/3/2017/0830/189.html">景观设施膜结构</a></span></li>
+        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/196.html"><img src="/public/imgs/product/1-1FS0192K1M0.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/196.html">景观设施膜结构</a></span></li>
+        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/195.html"><img src="/public/imgs/product/1-1FS0192G55X.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/195.html">景观设施膜结构</a></span></li>
+        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/194.html"><img src="/public/imgs/product/1-1FS0192649E7.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/194.html">景观设施膜结构</a></span></li>
+        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/193.html"><img src="/public/imgs/product/1-1FS0192620647.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/193.html">景观设施膜结构</a></span></li>
+        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/192.html"><img src="/public/imgs/product/1-1FS0192555509.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/192.html">景观设施膜结构</a></span></li>
+        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/191.html"><img src="/public/imgs/product/1-1FS0192532V3.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/191.html">景观设施膜结构</a></span></li>
+        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/190.html"><img src="/public/imgs/product/1-1FS019250b13.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/190.html">景观设施膜结构</a></span></li>
+        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/189.html"><img src="/public/imgs/product/1-1FS0192440D6.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/189.html">景观设施膜结构</a></span></li>
 
     </ul>
 </div>
@@ -72,8 +72,8 @@
         <div class="kfmin_cen"><img src="/public/imgs/product/kefu.png"></div>
         <div class="kfmin_rig">
             <div class="kfmin_rig_top"> 24小时咨询热线：<br>
-                <strong>北京娜美瑞膜结构技术有限公司</strong> </div>
-            <div class="kfmin_rig_bot"><a href="http://www.mtlmjg.com/6/">联系我们</a></div>
+                <strong>淄博景博膜结构工程有限公司</strong> </div>
+            <div class="kfmin_rig_bot"><a href="http://localhost:3000/6/">联系我们</a></div>
         </div>
     </div>
 </div>
@@ -83,10 +83,10 @@
 </div>
 <div class="cpzs">
     <ul>
-        <li><a href="http://www.mtlmjg.com/3/20170830/102.html"><img src="/public/imgs/product/1-1FS0115910407.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/3/20170830/102.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://www.mtlmjg.com/3/20170830/101.html"><img src="/public/imgs/product/1-1FS0115TT47.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/3/20170830/101.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://www.mtlmjg.com/3/20170830/100.html"><img src="/public/imgs/product/1-1FS0115R2551.gif" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/3/20170830/100.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://www.mtlmjg.com/3/20170830/99.html"><img src="/public/imgs/product/1-1FS0115P1944.jpg" width="253" height="253"></a><span><a href="http://www.mtlmjg.com/3/20170830/99.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/102.html"><img src="/public/imgs/product/1-1FS0115910407.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/3/20170830/102.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/101.html"><img src="/public/imgs/product/1-1FS0115TT47.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/3/20170830/101.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/100.html"><img src="/public/imgs/product/1-1FS0115R2551.gif" width="253" height="253"></a><span><a href="http://localhost:3000/3/20170830/100.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/99.html"><img src="/public/imgs/product/1-1FS0115P1944.jpg" width="253" height="253"></a><span><a href="http://localhost:3000/3/20170830/99.html">学校看台膜结构案例</a></span></li>
 
     </ul>
 </div>
@@ -94,9 +94,9 @@
 <div class="gsjj">
     <div class="gsjj_main">
         <div class="gsjj_main_left"><img src="/public/imgs/product/gs.jpg" width="360" height="430"></div>
-        <div class="gsjj_main_right"> <span>北京娜美瑞膜结构技术有限公司</span>
-            <p>  北京娜美瑞膜结构技术有限公司是以建筑膜结构技术开发、设计、制作、施工及维护的先进技术环保企业，公司与一大批国较早从事建筑膜结构设计、制作和施工的高素质人才合作，我公司开发多维空间结构建造技术，加强国际交流与技术合作，引进了国际最先进的德国EASY膜设计软件及同济大学3D3S钢结构、膜结构设计软件进行膜结构建模、荷载分析、裁剪及结构设计。争创国际一流的空间结构工程公司。 北京娜美瑞膜结构技术有限公司 优秀的设计团队，专业的技术团队，精湛的施工团队已参与完成100多项国内外标志性膜结构建筑，公司将设技术研发部、项目部、客服部、设计部、监理部、安全文明 </p>
-            <div class="gsjj_more"><a href="http://www.mtlmjg.com/1/">查看更多</a></div>
+        <div class="gsjj_main_right"> <span>淄博景博膜结构工程有限公司</span>
+            <p>  淄博景博膜结构工程有限公司是以建筑膜结构技术开发、设计、制作、施工及维护的先进技术环保企业。 淄博景博膜结构工程有限公司 优秀的设计团队，专业的技术团队，精湛的施工团队已参与完成多项国内标志性膜结构建筑。根据膜结构的建筑用途、使用环境、结构特点及建筑风格等具体情况来选择膜材和结构设计方案，重视项目设计的可操作性和细部处理，对加工做到精细再精细，对施工做到严格严谨，使每项工程都是精品中的精品。  公司秉承“以人为本、科学管理、无限创新、质量为魂、诚信是本、服务至上”的经营理念，以专业的技术，全新的思维竭诚为广大客户设计建造完美和谐的空间结构工程。 </p>
+            <div class="gsjj_more"><a href="http://localhost:3000/1/">查看更多</a></div>
         </div>
     </div>
 </div>
@@ -105,35 +105,35 @@
     <p>携手高新技术，为您提升品质，节约成本</p>
 </div>
 <div class="news">
-    <div class="news_left"> <img src="/public/imgs/product/news.jpg"> <div class="news_left_new1"> <span><a href="http://www.mtlmjg.com/4/20170411/25.html">选择张拉膜车棚注意事项</a></span>
+    <div class="news_left"> <img src="/public/imgs/product/news.jpg"> <div class="news_left_new1"> <span><a href="http://localhost:3000/4/20170411/25.html">选择张拉膜车棚注意事项</a></span>
         <p>选择张拉膜车棚因该注意哪些事项？ 张拉膜车棚的设计主要包括体形设计、荷载分析和裁剪分析等四大问题。通过设计确定建筑形状尺寸、三维造型、净空体量并确定各控制点的坐标和...……</p>
     </div>
     </div>
     <div class="news_right mr60">
         <ul>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://www.mtlmjg.com/4/20170411/25.html">选择张拉膜车棚注意事项</a></p>
+                <p><a href="http://localhost:3000/4/20170411/25.html">选择张拉膜车棚注意事项</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://www.mtlmjg.com/4/20170411/24.html">膜结构车棚结构形式浅析</a></p>
+                <p><a href="http://localhost:3000/4/20170411/24.html">膜结构车棚结构形式浅析</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://www.mtlmjg.com/4/20170411/23.html">膜结构施工中膜的安装要</a></p>
+                <p><a href="http://localhost:3000/4/20170411/23.html">膜结构施工中膜的安装要</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://www.mtlmjg.com/4/20170411/22.html">为什么膜结构建筑现在这</a></p>
+                <p><a href="http://localhost:3000/4/20170411/22.html">为什么膜结构建筑现在这</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://www.mtlmjg.com/4/20170411/21.html">膜结构排水要注意的问题</a></p>
+                <p><a href="http://localhost:3000/4/20170411/21.html">膜结构排水要注意的问题</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://www.mtlmjg.com/4/20170411/20.html">张拉整体结构</a></p>
+                <p><a href="http://localhost:3000/4/20170411/20.html">张拉整体结构</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://www.mtlmjg.com/4/20170411/19.html">膜结构车棚和景观棚的区</a></p>
+                <p><a href="http://localhost:3000/4/20170411/19.html">膜结构车棚和景观棚的区</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://www.mtlmjg.com/4/20170411/18.html">独家定制膜结构车棚</a></p>
+                <p><a href="http://localhost:3000/4/20170411/18.html">独家定制膜结构车棚</a></p>
                 <span>2017-04-11</span> </li>
 
         </ul>
@@ -141,7 +141,7 @@
 </div>
 <div class="clear"></div>
 <div class="foot">
-    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有</div>
+    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1</div>
 </div>
 <script>
     var _hmt = _hmt || [];
