--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,20 +1,21 @@
-html,body{
+html, body {
     height: 100%;
     width: 100%;
-    margin: 0
-}
-.bg{
-    position: relative;
-    height: 100%;
-    width: 100%;
+    margin: 0;
     background-color: #027ac1;
-    text-align: center;
-    padding-top:100px ;
 }
-.toHome{
+
+.bg {
+    position: relative;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.toHome {
     text-align: center;
 }
-.toHome button{
+
+.toHome button {
     border: 1px solid #ffffff;
     background: transparent;
     color: #ffffff;
