'修改主机地址'

--- a/views/error.html
+++ b/views/error.html
@@ -16,7 +16,7 @@
 </div>
 <script>
     function back2Home(){
-        window.location.href = 'http://localhost:3000'
+        window.location.href = 'http://jbmjg.net/'
     }
 </script>
 </body>
