--- a/views/index.html
+++ b/views/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>淄博景博膜结构工程有限公司</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="污水处理厂膜结构,充电桩,学习膜结构看台">
+    <meta name="description" content="淄博景博膜结构工程有限公司致力于景观张拉膜结构工程策划,设计,建造与膜结构工程施工,主要生产,推拉篷 ,张拉膜结构景观,膜结构车棚,膜结构自行停车棚，商业街屋顶膜结构,环保污水池加盖工程的安装及膜结构应用开发和后期维修和维护,有需要我公司膜结构产品的客户请联系我们!"/>
+    <meta name="keywords" content="车棚,停车棚,自行车棚,膜结构,膜结构工程,膜结构公司,景观膜结构,张拉膜,景观张拉膜,张拉膜结构,张拉膜工程,张拉膜公司"/>
+
     <link href="/public/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/public/libs/jslides/jquery.jslides.css" media="screen">
     <script charset="utf-8" src="/public/libs/lxb.js"></script>
