--- a/views/3.html
+++ b/views/3.html
@@ -93,42 +93,39 @@
     <div class="n_right">
 
 
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/196.html"><img
-                src="/public/imgs/upload/1-1FS0192K1M0.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/196.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/195.html"><img
-                src="/public/imgs/upload/1-1FS0192G55X.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/195.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/194.html"><img
-                src="/public/imgs/upload/1-1FS0192649E7.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/194.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/193.html"><img
-                src="/public/imgs/upload/1-1FS0192620647.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/193.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/192.html"><img
-                src="/public/imgs/upload/1-1FS0192555509.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/192.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/191.html"><img
-                src="/public/imgs/upload/1-1FS0192532V3.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/191.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/190.html"><img
-                src="/public/imgs/upload/1-1FS019250b13.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/190.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/189.html"><img
-                src="/public/imgs/upload/1-1FS0192440D6.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/189.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/188.html"><img
-                src="/public/imgs/upload/1-1FS0192414C2.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/188.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/187.html"><img
-                src="/public/imgs/upload/1-1FS019234M48.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/187.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/186.html"><img
-                src="/public/imgs/upload/1-1FS0192305514.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/186.html">景观设施膜结构</a></span></li>
-        <li><a href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/185.html"><img
-                src="/public/imgs/upload/1-1FS0192020J5.jpg"></a><span><a
-                href="http://localhost:3000/a/chanpinzhongxin/3/2017/0830/185.html">景观设施膜结构</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/102.html"><img src="/public/imgs/upload/1-1FS0115910407.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/102.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/101.html"><img
+                src="/public/imgs/upload/1-1FS0115TT47.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/101.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/100.html"><img
+                src="/public/imgs/upload/1-1FS0115R2551.gif"></a><span><a
+                href="http://localhost:3000/3/20170830/100.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/99.html"><img
+                src="/public/imgs/upload/1-1FS0115P1944.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/99.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/98.html"><img
+                src="/public/imgs/upload/1-1FS0115I4339.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/98.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/97.html"><img src="/public/imgs/upload/1-1FS0115FK17.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/97.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/96.html"><img src="/public/imgs/upload/1-1FS011563HQ.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/96.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/95.html"><img
+                src="/public/imgs/upload/1-1FS0115611b3.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/95.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/94.html"><img
+                src="/public/imgs/upload/1-1FS011554I59.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/94.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/93.html"><img
+                src="/public/imgs/upload/1-1FS0115522c9.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/93.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/92.html"><img
+                src="/public/imgs/upload/1-1FS0115504606.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/92.html">学校看台膜结构案例</a></span></li>
+        <li><a href="http://localhost:3000/3/20170830/91.html"><img
+                src="/public/imgs/upload/1-1FS0115445947.jpg"></a><span><a
+                href="http://localhost:3000/3/20170830/91.html">学校看台膜结构案例</a></span></li>
 
 
         <div class="clear"></div>
@@ -140,18 +137,12 @@
             <ul>
                 <li>首页</li>
                 <li class="thisclass">1</li>
-                <li><a href="http://localhost:3000/2/list_2_2.html">2</a></li>
-                <li><a href="http://localhost:3000/2/list_2_3.html">3</a></li>
-                <li><a href="http://localhost:3000/2/list_2_4.html">4</a></li>
-                <li><a href="http://localhost:3000/2/list_2_5.html">5</a></li>
-                <li><a href="http://localhost:3000/2/list_2_6.html">6</a></li>
-                <li><a href="http://localhost:3000/2/list_2_7.html">7</a></li>
-                <li><a href="http://localhost:3000/2/list_2_8.html">8</a></li>
-                <li><a href="http://localhost:3000/2/list_2_9.html">9</a></li>
-                <li><a href="http://localhost:3000/2/list_2_10.html">10</a></li>
-                <li><a href="http://localhost:3000/2/list_2_2.html">下一页</a></li>
-                <li><a href="http://localhost:3000/2/list_2_10.html">末页</a></li>
-                <li><span class="pageinfo">共 <strong>10</strong>页<strong>120</strong>条</span></li>
+                <li><a href="http://localhost:3000/3/list_3_2.html">2</a></li>
+                <li><a href="http://localhost:3000/3/list_3_3.html">3</a></li>
+                <li><a href="http://localhost:3000/3/list_3_4.html">4</a></li>
+                <li><a href="http://localhost:3000/3/list_3_2.html">下一页</a></li>
+                <li><a href="http://localhost:3000/3/list_3_4.html">末页</a></li>
+                <li><span class="pageinfo">共 <strong>4</strong>页<strong>42</strong>条</span></li>
 
             </ul>
         </div>
