--- a/views/6.html
+++ b/views/6.html
@@ -9,9 +9,11 @@
 
     <link href="/public/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/public/libs/jslides/jquery.jslides.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/public/libs/viewer/viewer.min.css" media="screen">
     <script charset="utf-8" src="/public/libs/lxb.js"></script>
     <script type="text/javascript" src="/public/libs/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="/public/libs/jslides/jquery.jslides.js"></script>
+    <script type="text/javascript" src="/public/libs/viewer/viewer.min.js"></script>
     <link rel="stylesheet" href="/public/css/float.css" type="text/css" charset="utf-8">
 </head>
 <body>
@@ -21,19 +23,19 @@
 <div class="nav">
     <div class="nav_main bold f14">
         <ul>
-            <li><a href="http://jbmjg.net/">网站首页</a></li>
+            <li><a href="http://localhost/">网站首页</a></li>
 
-            <li><a href="http://jbmjg.net/1/">公司简介</a></li>
+            <li><a href="http://localhost/1/">公司简介</a></li>
 
-            <li><a href="http://jbmjg.net/2/" rel="dropmenu2">产品展示</a></li>
+            <li><a href="http://localhost/2/" rel="dropmenu2">产品展示</a></li>
 
-            <li><a href="http://jbmjg.net/3/">工程案例</a></li>
+            <li><a href="http://localhost/3/">工程案例</a></li>
 
-            <li><a href="http://jbmjg.net/4/">新闻资讯</a></li>
+            <li><a href="http://localhost/4/">新闻资讯</a></li>
 
-            <li><a href="http://jbmjg.net/a5/">膜结构介绍</a></li>
+            <li><a href="http://localhost/a5/">膜结构介绍</a></li>
 
-            <li><a href="http://jbmjg.net/6/">联系我们</a></li>
+            <li><a href="http://localhost/6/">联系我们</a></li>
 
         </ul>
     </div>
@@ -43,16 +45,16 @@
     <div id="full-screen-slider">
         <ul id="slides">
             <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;">
-                <a href="http://jbmjg.net" target="_blank"></a></li>
+                <a href="http://localhost" target="_blank"></a></li>
 
         </ul>
         <ul id="pagination" style="margin-left: 445px;">
-            <li class="current"><a href="http://jbmjg.net/#">1</a></li>
+            <li class="current"><a href="http://localhost/#">1</a></li>
         </ul>
     </div>
     <!-- 代码 结束 -->
 </div>
-<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
+<div class="main_top" style="line-height:40px;"><a href="http://localhost/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
 </div>
 
 <div class="n_main">
