--- a/views/2.html
+++ b/views/2.html
@@ -9,9 +9,11 @@
 
     <link href="/public/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/public/libs/jslides/jquery.jslides.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/public/libs/viewer/viewer.min.css" media="screen">
     <script charset="utf-8" src="/public/libs/lxb.js"></script>
     <script type="text/javascript" src="/public/libs/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="/public/libs/jslides/jquery.jslides.js"></script>
+    <script type="text/javascript" src="/public/libs/viewer/viewer.min.js"></script>
     <link rel="stylesheet" href="/public/css/float.css" type="text/css" charset="utf-8">
 </head>
 <body>
@@ -21,19 +23,19 @@
 <div class="nav">
     <div class="nav_main bold f14">
         <ul>
-            <li><a href="http://jbmjg.net/">网站首页</a></li>
+            <li><a href="http://localhost/">网站首页</a></li>
 
-            <li><a href="http://jbmjg.net/1/">公司简介</a></li>
+            <li><a href="http://localhost/1/">公司简介</a></li>
 
-            <li><a href="http://jbmjg.net/2/" rel="dropmenu2">产品展示</a></li>
+            <li><a href="http://localhost/2/" rel="dropmenu2">产品展示</a></li>
 
-            <li><a href="http://jbmjg.net/3/">工程案例</a></li>
+            <li><a href="http://localhost/3/">工程案例</a></li>
 
-            <li><a href="http://jbmjg.net/4/">新闻资讯</a></li>
+            <li><a href="http://localhost/4/">新闻资讯</a></li>
 
-            <li><a href="http://jbmjg.net/a5/">膜结构介绍</a></li>
+            <li><a href="http://localhost/a5/">膜结构介绍</a></li>
 
-            <li><a href="http://jbmjg.net/6/">联系我们</a></li>
+            <li><a href="http://localhost/6/">联系我们</a></li>
 
         </ul>
     </div>
@@ -43,45 +45,45 @@
     <div id="full-screen-slider">
         <ul id="slides">
             <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;">
-                <a href="http://jbmjg.net" target="_blank"></a></li>
+                <a href="http://localhost" target="_blank"></a></li>
 
         </ul>
         <ul id="pagination" style="margin-left: 445px;">
-            <li class="current"><a href="http://jbmjg.net/#">1</a></li>
+            <li class="current"><a href="http://localhost/#">1</a></li>
         </ul>
     </div>
     <!-- 代码 结束 -->
 </div>
-<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
+<div class="main_top" style="line-height:40px;"><a href="http://localhost/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
 </div>
 
 <div class="n_main">
     <div class="n_left">
-        <div class="nlef_tit"><a href="http://jbmjg.net/2/">产品展示</a></div>
+        <div class="nlef_tit"><a href="http://localhost/2/">产品展示</a></div>
         <div class="nlef_main">
             <ul>
                 <ul>
 
-                    <li><span><a href="http://jbmjg.net/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/2/">自行车/汽车车棚膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/2/">自行车/汽车车棚膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/4/">充气膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/4/">充气膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/5/">PTFE/ETFE膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/5/">PTFE/ETFE膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/xuexiaokantai/">学校看台</a></span></li>
+                    <li><span><a href="http://localhost/2/xuexiaokantai/">学校看台</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/chongdianzhuang/">充电桩</a></span></li>
+                    <li><span><a href="http://localhost/2/chongdianzhuang/">充电桩</a></span></li>
 
                 </ul>
             </ul>
         </div>
-        <div class="nlef_tit"><a href="http://jbmjg.net/6/">联系我们</a></div>
+        <div class="nlef_tit"><a href="http://localhost/6/">联系我们</a></div>
         <div class="nlef_main1"><strong>淄博景博膜结构工程有限公司</strong> <br>
             电话：13869351802<br>
             地址：山东省淄博市沂源县城鲁山路东段三元市场院内<br>
@@ -92,42 +94,42 @@
     <div class="n_right">
 
 
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/196.html"><img
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192K1M0.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/196.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/195.html"><img
+                href="http://localhost/a/chanpinzhongxin/3/2017/0830/196.html">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192G55X.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/195.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/194.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192649E7.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/194.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/193.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192620647.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/193.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/192.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192555509.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/192.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/191.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192532V3.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/191.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/190.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS019250b13.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/190.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/189.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192440D6.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/189.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/188.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192414C2.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/188.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/187.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS019234M48.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/187.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/186.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192305514.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/186.html">景观设施膜结构</a></span></li>
-        <li><a href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/185.html"><img
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192020J5.jpg"></a><span><a
-                href="http://jbmjg.net/a/chanpinzhongxin/3/2017/0830/185.html">景观设施膜结构</a></span></li>
+                href="javascript:void(0)">景观设施膜结构</a></span></li>
 
 
         <div class="clear"></div>
@@ -139,17 +141,17 @@
             <ul>
                 <li>首页</li>
                 <li class="thisclass">1</li>
-                <li><a href="http://jbmjg.net/2/list_2_2.html">2</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_3.html">3</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_4.html">4</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_5.html">5</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_6.html">6</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_7.html">7</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_8.html">8</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_9.html">9</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_10.html">10</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_2.html">下一页</a></li>
-                <li><a href="http://jbmjg.net/2/list_2_10.html">末页</a></li>
+                <li><a href="http://localhost/2/list_2_2.html">2</a></li>
+                <li><a href="http://localhost/2/list_2_3.html">3</a></li>
+                <li><a href="http://localhost/2/list_2_4.html">4</a></li>
+                <li><a href="http://localhost/2/list_2_5.html">5</a></li>
+                <li><a href="http://localhost/2/list_2_6.html">6</a></li>
+                <li><a href="http://localhost/2/list_2_7.html">7</a></li>
+                <li><a href="http://localhost/2/list_2_8.html">8</a></li>
+                <li><a href="http://localhost/2/list_2_9.html">9</a></li>
+                <li><a href="http://localhost/2/list_2_10.html">10</a></li>
+                <li><a href="http://localhost/2/list_2_2.html">下一页</a></li>
+                <li><a href="http://localhost/2/list_2_10.html">末页</a></li>
                 <li><span class="pageinfo">共 <strong>10</strong>页<strong>120</strong>条</span></li>
 
             </ul>
@@ -160,7 +162,8 @@
 </div>
 <div class="clear"></div>
 <div class="foot">
-    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1</div>
+    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1
+    </div>
 </div>
 <script>
     var _hmt = _hmt || [];
@@ -170,6 +173,7 @@
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
     })();
+    $('.n_right').viewer();
 </script>
 <!-- /footer -->
 
