--- a/views/3.html
+++ b/views/3.html
@@ -9,9 +9,11 @@
 
     <link href="/public/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/public/libs/jslides/jquery.jslides.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/public/libs/viewer/viewer.min.css" media="screen">
     <script charset="utf-8" src="/public/libs/lxb.js"></script>
     <script type="text/javascript" src="/public/libs/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="/public/libs/jslides/jquery.jslides.js"></script>
+    <script type="text/javascript" src="/public/libs/viewer/viewer.min.js"></script>
     <link rel="stylesheet" href="/public/css/float.css" type="text/css" charset="utf-8">
 </head>
 <body>
@@ -21,19 +23,19 @@
 <div class="nav">
     <div class="nav_main bold f14">
         <ul>
-            <li><a href="http://jbmjg.net/">网站首页</a></li>
+            <li><a href="http://localhost/">网站首页</a></li>
 
-            <li><a href="http://jbmjg.net/1/">公司简介</a></li>
+            <li><a href="http://localhost/1/">公司简介</a></li>
 
-            <li><a href="http://jbmjg.net/2/" rel="dropmenu2">产品展示</a></li>
+            <li><a href="http://localhost/2/" rel="dropmenu2">产品展示</a></li>
 
-            <li><a href="http://jbmjg.net/3/">工程案例</a></li>
+            <li><a href="http://localhost/3/">工程案例</a></li>
 
-            <li><a href="http://jbmjg.net/4/">新闻资讯</a></li>
+            <li><a href="http://localhost/4/">新闻资讯</a></li>
 
-            <li><a href="http://jbmjg.net/a5/">膜结构介绍</a></li>
+            <li><a href="http://localhost/a5/">膜结构介绍</a></li>
 
-            <li><a href="http://jbmjg.net/6/">联系我们</a></li>
+            <li><a href="http://localhost/6/">联系我们</a></li>
 
         </ul>
     </div>
@@ -43,45 +45,45 @@
     <div id="full-screen-slider">
         <ul id="slides">
             <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;">
-                <a href="http://jbmjg.net" target="_blank"></a></li>
+                <a href="http://localhost" target="_blank"></a></li>
 
         </ul>
         <ul id="pagination" style="margin-left: 445px;">
-            <li class="current"><a href="http://jbmjg.net/#">1</a></li>
+            <li class="current"><a href="http://localhost/#">1</a></li>
         </ul>
     </div>
     <!-- 代码 结束 -->
 </div>
-<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
+<div class="main_top" style="line-height:40px;"><a href="http://localhost/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
 </div>
 
 <div class="n_main">
     <div class="n_left">
-        <div class="nlef_tit"><a href="http://jbmjg.net/2/">产品展示</a></div>
+        <div class="nlef_tit"><a href="http://localhost/2/">产品展示</a></div>
         <div class="nlef_main">
             <ul>
                 <ul>
 
-                    <li><span><a href="http://jbmjg.net/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/2/">自行车/汽车车棚膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/2/">自行车/汽车车棚膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/4/">充气膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/4/">充气膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/5/">PTFE/ETFE膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/5/">PTFE/ETFE膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/xuexiaokantai/">学校看台</a></span></li>
+                    <li><span><a href="http://localhost/2/xuexiaokantai/">学校看台</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/chongdianzhuang/">充电桩</a></span></li>
+                    <li><span><a href="http://localhost/2/chongdianzhuang/">充电桩</a></span></li>
 
                 </ul>
             </ul>
         </div>
-        <div class="nlef_tit"><a href="http://jbmjg.net/6/">联系我们</a></div>
+        <div class="nlef_tit"><a href="http://localhost/6/">联系我们</a></div>
         <div class="nlef_main1"><strong>淄博景博膜结构工程有限公司</strong> <br>
             电话：13869351802<br>
             地址：山东省淄博市沂源县城鲁山路东段三元市场院内<br>
@@ -92,39 +94,39 @@
     <div class="n_right">
 
 
-        <li><a href="http://jbmjg.net/3/20170830/102.html"><img src="/public/imgs/upload/1-1FS0115910407.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/102.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/101.html"><img
+        <li><a href="javascript:void(0)"><img src="/public/imgs/upload/1-1FS0115910407.jpg"></a><span><a
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0115TT47.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/101.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/100.html"><img
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0115R2551.gif"></a><span><a
-                href="http://jbmjg.net/3/20170830/100.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/99.html"><img
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0115P1944.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/99.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/98.html"><img
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0115I4339.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/98.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/97.html"><img src="/public/imgs/upload/1-1FS0115FK17.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/97.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/96.html"><img src="/public/imgs/upload/1-1FS011563HQ.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/96.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/95.html"><img
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/upload/1-1FS0115FK17.jpg"></a><span><a
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/upload/1-1FS011563HQ.jpg"></a><span><a
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0115611b3.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/95.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/94.html"><img
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS011554I59.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/94.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/93.html"><img
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0115522c9.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/93.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/92.html"><img
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0115504606.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/92.html">学校看台膜结构案例</a></span></li>
-        <li><a href="http://jbmjg.net/3/20170830/91.html"><img
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0115445947.jpg"></a><span><a
-                href="http://jbmjg.net/3/20170830/91.html">学校看台膜结构案例</a></span></li>
+                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
 
 
         <div class="clear"></div>
@@ -136,11 +138,11 @@
             <ul>
                 <li>首页</li>
                 <li class="thisclass">1</li>
-                <li><a href="http://jbmjg.net/3/list_3_2.html">2</a></li>
-                <li><a href="http://jbmjg.net/3/list_3_3.html">3</a></li>
-                <li><a href="http://jbmjg.net/3/list_3_4.html">4</a></li>
-                <li><a href="http://jbmjg.net/3/list_3_2.html">下一页</a></li>
-                <li><a href="http://jbmjg.net/3/list_3_4.html">末页</a></li>
+                <li><a href="http://localhost/3/list_3_2.html">2</a></li>
+                <li><a href="http://localhost/3/list_3_3.html">3</a></li>
+                <li><a href="http://localhost/3/list_3_4.html">4</a></li>
+                <li><a href="http://localhost/3/list_3_2.html">下一页</a></li>
+                <li><a href="http://localhost/3/list_3_4.html">末页</a></li>
                 <li><span class="pageinfo">共 <strong>4</strong>页<strong>42</strong>条</span></li>
 
             </ul>
@@ -161,6 +163,7 @@
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
     })();
+    $('.n_right').viewer();
 </script>
 <!-- /footer -->
 
