--- a/views/4.html
+++ b/views/4.html
@@ -9,9 +9,11 @@
 
     <link href="/public/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/public/libs/jslides/jquery.jslides.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/public/libs/viewer/viewer.min.css" media="screen">
     <script charset="utf-8" src="/public/libs/lxb.js"></script>
     <script type="text/javascript" src="/public/libs/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="/public/libs/jslides/jquery.jslides.js"></script>
+    <script type="text/javascript" src="/public/libs/viewer/viewer.min.js"></script>
     <link rel="stylesheet" href="/public/css/float.css" type="text/css" charset="utf-8">
 </head>
 <body>
@@ -21,19 +23,19 @@
 <div class="nav">
     <div class="nav_main bold f14">
         <ul>
-            <li><a href="http://jbmjg.net/">网站首页</a></li>
+            <li><a href="http://localhost/">网站首页</a></li>
 
-            <li><a href="http://jbmjg.net/1/">公司简介</a></li>
+            <li><a href="http://localhost/1/">公司简介</a></li>
 
-            <li><a href="http://jbmjg.net/2/" rel="dropmenu2">产品展示</a></li>
+            <li><a href="http://localhost/2/" rel="dropmenu2">产品展示</a></li>
 
-            <li><a href="http://jbmjg.net/3/">工程案例</a></li>
+            <li><a href="http://localhost/3/">工程案例</a></li>
 
-            <li><a href="http://jbmjg.net/4/">新闻资讯</a></li>
+            <li><a href="http://localhost/4/">新闻资讯</a></li>
 
-            <li><a href="http://jbmjg.net/a5/">膜结构介绍</a></li>
+            <li><a href="http://localhost/a5/">膜结构介绍</a></li>
 
-            <li><a href="http://jbmjg.net/6/">联系我们</a></li>
+            <li><a href="http://localhost/6/">联系我们</a></li>
 
         </ul>
     </div>
@@ -43,45 +45,45 @@
     <div id="full-screen-slider">
         <ul id="slides">
             <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;">
-                <a href="http://jbmjg.net" target="_blank"></a></li>
+                <a href="http://localhost" target="_blank"></a></li>
 
         </ul>
         <ul id="pagination" style="margin-left: 445px;">
-            <li class="current"><a href="http://jbmjg.net/#">1</a></li>
+            <li class="current"><a href="http://localhost/#">1</a></li>
         </ul>
     </div>
     <!-- 代码 结束 -->
 </div>
-<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
+<div class="main_top" style="line-height:40px;"><a href="http://localhost/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
 </div>
 
 <div class="n_main">
     <div class="n_left">
-        <div class="nlef_tit"><a href="http://jbmjg.net/2/">产品展示</a></div>
+        <div class="nlef_tit"><a href="http://localhost/2/">产品展示</a></div>
         <div class="nlef_main">
             <ul>
                 <ul>
 
-                    <li><span><a href="http://jbmjg.net/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/2/">自行车/汽车车棚膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/2/">自行车/汽车车棚膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/4/">充气膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/4/">充气膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/5/">PTFE/ETFE膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/5/">PTFE/ETFE膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/xuexiaokantai/">学校看台</a></span></li>
+                    <li><span><a href="http://localhost/2/xuexiaokantai/">学校看台</a></span></li>
 
-                    <li><span><a href="http://jbmjg.net/2/chongdianzhuang/">充电桩</a></span></li>
+                    <li><span><a href="http://localhost/2/chongdianzhuang/">充电桩</a></span></li>
 
                 </ul>
             </ul>
         </div>
-        <div class="nlef_tit"><a href="http://jbmjg.net/6/">联系我们</a></div>
+        <div class="nlef_tit"><a href="http://localhost/6/">联系我们</a></div>
         <div class="nlef_main1"><strong>淄博景博膜结构工程有限公司</strong> <br>
             电话：13869351802<br>
             地址：山东省淄博市沂源县城鲁山路东段三元市场院内<br>
@@ -91,24 +93,24 @@
 
     <div class="n_news">
 
-        <li><p><a href="http://jbmjg.net/4/20170411/25.html" title="选择张拉膜车棚注意事项">选择张拉膜车棚注意事项</a></p>
+        <li><p><a href="http://localhost/4/20170411/25.html" title="选择张拉膜车棚注意事项">选择张拉膜车棚注意事项</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://jbmjg.net/4/20170411/24.html" title="膜结构车棚结构形式浅析">膜结构车棚结构形式浅析</a></p>
+        <li><p><a href="http://localhost/4/20170411/24.html" title="膜结构车棚结构形式浅析">膜结构车棚结构形式浅析</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://jbmjg.net/4/20170411/23.html" title="膜结构施工中膜的安装要点有哪些？">膜结构施工中膜的安装要点有哪些？</a></p><span>2017-04-11</span>
+        <li><p><a href="http://localhost/4/20170411/23.html" title="膜结构施工中膜的安装要点有哪些？">膜结构施工中膜的安装要点有哪些？</a></p><span>2017-04-11</span>
         </li>
-        <li><p><a href="http://jbmjg.net/4/20170411/22.html" title="为什么膜结构建筑现在这么流行?">为什么膜结构建筑现在这么流行?</a></p><span>2017-04-11</span>
+        <li><p><a href="http://localhost/4/20170411/22.html" title="为什么膜结构建筑现在这么流行?">为什么膜结构建筑现在这么流行?</a></p><span>2017-04-11</span>
         </li>
-        <li><p><a href="http://jbmjg.net/4/20170411/21.html" title="膜结构排水要注意的问题">膜结构排水要注意的问题</a></p>
+        <li><p><a href="http://localhost/4/20170411/21.html" title="膜结构排水要注意的问题">膜结构排水要注意的问题</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://jbmjg.net/4/20170411/20.html" title="张拉整体结构">张拉整体结构</a></p><span>2017-04-11</span></li>
-        <li><p><a href="http://jbmjg.net/4/20170411/19.html" title="膜结构车棚和景观棚的区别">膜结构车棚和景观棚的区别</a></p>
+        <li><p><a href="http://localhost/4/20170411/20.html" title="张拉整体结构">张拉整体结构</a></p><span>2017-04-11</span></li>
+        <li><p><a href="http://localhost/4/20170411/19.html" title="膜结构车棚和景观棚的区别">膜结构车棚和景观棚的区别</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://jbmjg.net/4/20170411/18.html" title="独家定制膜结构车棚">独家定制膜结构车棚</a></p><span>2017-04-11</span>
+        <li><p><a href="http://localhost/4/20170411/18.html" title="独家定制膜结构车棚">独家定制膜结构车棚</a></p><span>2017-04-11</span>
         </li>
-        <li><p><a href="http://jbmjg.net/4/20170411/17.html" title="膜结构车棚的四大注意点">膜结构车棚的四大注意点</a></p>
+        <li><p><a href="http://localhost/4/20170411/17.html" title="膜结构车棚的四大注意点">膜结构车棚的四大注意点</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://jbmjg.net/4/20170411/16.html" title="膜结构看台合格品验收流程">膜结构看台合格品验收流程</a></p>
+        <li><p><a href="http://localhost/4/20170411/16.html" title="膜结构看台合格品验收流程">膜结构看台合格品验收流程</a></p>
             <span>2017-04-11</span></li>
 
 
