--- a/views/1.html
+++ b/views/1.html
@@ -67,17 +67,17 @@
 
                     <li><span><a href="http://localhost/2/2/">自行车/汽车车棚膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/3/">景观设施膜结构</a></span></li>
 
                     <li><span><a href="http://localhost/2/4/">充气膜结构</a></span></li>
 
                     <li><span><a href="http://localhost/2/5/">PTFE/ETFE膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/6/">沼气/污水膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/xuexiaokantai/">学校看台</a></span></li>
+                    <li><span><a href="http://localhost/2/7/">学校看台</a></span></li>
 
-                    <li><span><a href="http://localhost/2/chongdianzhuang/">充电桩</a></span></li>
+                    <li><span><a href="http://localhost/2/8/">充电桩</a></span></li>
 
                 </ul>
             </ul>
