--- a/views/2.html
+++ b/views/2.html
@@ -68,17 +68,17 @@
 
                     <li><span><a href="http://localhost/2/2/">自行车/汽车车棚膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/3/">景观设施膜结构</a></span></li>
 
                     <li><span><a href="http://localhost/2/4/">充气膜结构</a></span></li>
 
                     <li><span><a href="http://localhost/2/5/">PTFE/ETFE膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/6/">沼气/污水膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/xuexiaokantai/">学校看台</a></span></li>
+                    <li><span><a href="http://localhost/2/7/">学校看台</a></span></li>
 
-                    <li><span><a href="http://localhost/2/chongdianzhuang/">充电桩</a></span></li>
+                    <li><span><a href="http://localhost/2/8/">充电桩</a></span></li>
 
                 </ul>
             </ul>
@@ -96,7 +96,7 @@
 
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192K1M0.jpg"></a><span><a
-                href="http://localhost/a/chanpinzhongxin/3/2017/0830/196.html">景观设施膜结构</a></span></li>
+                href="http://localhost/2/3/2017/0830/196.html">景观设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/1-1FS0192G55X.jpg"></a><span><a
                 href="javascript:void(0)">景观设施膜结构</a></span></li>
