--- a/views/index.html
+++ b/views/index.html
@@ -57,14 +57,14 @@
 </div>
 <div class="cpzs">
     <ul>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192K1M0.jpg" width="253" height="253"></a><span><a href="http://localhost/2/3/2017/0830/196.html">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192G55X.jpg" width="253" height="253"></a><span><a href="http://localhost/2/3/2017/0830/195.html">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192649E7.jpg" width="253" height="253"></a><span><a href="http://localhost/2/3/2017/0830/194.html">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192620647.jpg" width="253" height="253"></a><span><a href="http://localhost/2/3/2017/0830/193.html">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192555509.jpg" width="253" height="253"></a><span><a href="http://localhost/2/3/2017/0830/192.html">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192532V3.jpg" width="253" height="253"></a><span><a href="http://localhost/2/3/2017/0830/191.html">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS019250b13.jpg" width="253" height="253"></a><span><a href="http://localhost/2/3/2017/0830/190.html">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192440D6.jpg" width="253" height="253"></a><span><a href="http://localhost/2/3/2017/0830/189.html">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192K1M0.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192G55X.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192649E7.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192620647.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192555509.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192532V3.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS019250b13.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192440D6.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
 
     </ul>
 </div>
@@ -88,10 +88,10 @@
 </div>
 <div class="cpzs">
     <ul>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115910407.jpg" width="253" height="253"></a><span><a href="http://localhost/3/20170830/102.html">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115TT47.jpg" width="253" height="253"></a><span><a href="http://localhost/3/20170830/101.html">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115R2551.gif" width="253" height="253"></a><span><a href="http://localhost/3/20170830/100.html">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115P1944.jpg" width="253" height="253"></a><span><a href="http://localhost/3/20170830/99.html">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115910407.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115TT47.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115R2551.gif" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115P1944.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
 
     </ul>
 </div>
