--- a/views/2/6.html
+++ b/views/2/6.html
@@ -57,7 +57,6 @@
 <div class="main_top" style="line-height:40px;"><a href="http://localhost/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
 </div>
 
-
 <div class="n_main">
     <div class="n_left">
         <div class="nlef_tit"><a href="http://localhost/2/">产品展示</a></div>
@@ -69,17 +68,17 @@
 
                     <li><span><a href="http://localhost/2/2/">自行车/汽车车棚膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/a/chanpinzhongxin/3/">景观设施膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/3/">景观设施膜结构</a></span></li>
 
                     <li><span><a href="http://localhost/2/4/">充气膜结构</a></span></li>
 
                     <li><span><a href="http://localhost/2/5/">PTFE/ETFE膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/zhaoqi_wushuimojiegou/">沼气/污水膜结构</a></span></li>
+                    <li><span><a href="http://localhost/2/6/">沼气/污水膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/xuexiaokantai/">学校看台</a></span></li>
+                    <li><span><a href="http://localhost/2/7/">学校看台</a></span></li>
 
-                    <li><span><a href="http://localhost/2/chongdianzhuang/">充电桩</a></span></li>
+                    <li><span><a href="http://localhost/2/8/">充电桩</a></span></li>
 
                 </ul>
             </ul>
@@ -96,11 +95,23 @@
 
 
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/ptfe/0TU04530-0-lp.jpg"></a><span><a
-                href="javascript:void(0)">PTFE/ETFE膜结构</a></span></li>
+                src="/public/imgs/wscl/1-1F62GUQ60-L.jpg"></a><span><a
+                href="javascript:void(0)">污水厂膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/ptfe/0TRR3O-0-lp.jpg"></a><span><a
-                href="javascript:void(0)">PTFE/ETFE膜结构</a></span></li>
+                src="/public/imgs/wscl/1-1F62G41P43T.png"></a><span><a
+                href="javascript:void(0)">污水处理厂</a></span></li>
+        <li><a href="javascript:void(0)"><img
+                src="/public/imgs/wscl/1-1F62G41J3D3.png"></a><span><a
+                href="javascript:void(0)">污水处理厂</a></span></li>
+        <li><a href="javascript:void(0)"><img
+                src="/public/imgs/wscl/1-1F62G41H53E.png"></a><span><a
+                href="javascript:void(0)">污水处理厂</a></span></li>
+        <li><a href="javascript:void(0)"><img
+                src="/public/imgs/wscl/1-1F62G41F6357.png"></a><span><a
+                href="javascript:void(0)">污水处理厂</a></span></li>
+        <li><a href="javascript:void(0)"><img
+                src="/public/imgs/wscl/1-1F62G41620W6.png"></a><span><a
+                href="javascript:void(0)">污水处理厂</a></span></li>
 
 
         <div class="clear"></div>
@@ -110,7 +121,7 @@
    <!-- <div class="pagination-wrapper">
         <div class="pagination">
             <ul>
-                <li><span class="pageinfo">共 <strong>1</strong>页<strong>2</strong>条记录</span></li>
+                <li><span class="pageinfo">共 <strong>1</strong>页<strong>6</strong>条记录</span></li>
 
             </ul>
         </div>
@@ -120,8 +131,7 @@
 </div>
 <div class="clear"></div>
 <div class="foot">
-    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1
-    </div>
+    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1</div>
 </div>
 <script>
     var _hmt = _hmt || [];
